# ==== Setuptools Input ====
[metadata]
name = optionset
author = Matthew C. Jones
author_email = matt.c.jones.aoe@gmail.com
license = GPLv3
description = A lightweight tool for conducting parameter studies.
long_description = file: README.rst
keywords = utility, macro-processor
url = https://github.com/MattCJones/optionset
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Pre-processors
    Topic :: Software Development :: User Interfaces
    Topic :: Text Processing
    Topic :: Text Processing :: General
    Topic :: Text Processing :: Indexing
    Topic :: Utilities
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Unix Shell
version = attr: optionset.optionset.__version__

[options]
packages = find:
# zip_safe = True
include_package_data = True
python_requires = >=3.7
install_requires = None

# [options.extras_require]
# lint =
#     flake8
#     mypy
#     tox

[options.entry_points]
console_scripts =
    optionset = optionset.optionset:main

# [options.package_data]
# testenv = tests/*

# ==== Tox Development Automation Tool ====
[tox:tox]
toxworkdir=/tmp/.tox
envlist =
#    py37
    # py38
    # py39

[testenv]
# deps =
#     coverage
commands =
    # coverage run "cd tests; ./runtests.py"
    # coverage report -m
    python -m unittest discover tests

[testenv:lint]
deps = flake8
whitelist_externals = mypy
commands =
    flake8 optionset tests
    mypy optionset

[coverage:run]
data_file = /tmp/.tox/.coverage

[flake8]
exclude =
    */optionset/__init__.py
    ./build/*
    *archive*
    tests/filesToTest

ignore=
    # Whitespace around operator
    E226

[mypy]
cache_dir = /tmp/.tox/.mypy_cache
